import type { Plugin } from 'prettier';
import type { PluginOptions } from './index.ts';
import { format } from 'prettier';
import { parsers as prettierParsers } from 'prettier/plugins/yaml';
import { expect, expectTypeOf, test } from 'vitest';
import * as pluginYAML from './index.ts';

const TEST_YAML = `
version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: '/'
    schedule:
      { interval: 'weekly', time: '12:00' }

  - package-ecosystem: npm
    directory: "/"
    schedule:
      interval: "daily"
    versioning-strategy: "increase"
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
`;

test('exposes correct public API', () => {
	expectTypeOf(pluginYAML).toExtend<Plugin>();

	expect(pluginYAML).toHaveProperty('parsers');
	expect(pluginYAML.parsers).toHaveProperty('yaml');

	expectTypeOf<PluginOptions>().toBeObject();
});

test('formats YAML', async () => {
	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
	});

	expect(output).toMatchSnapshot();
});

test('respects `bracketSpacing`', async () => {
	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		bracketSpacing: false,
	});

	expect(output).toMatchSnapshot();
});

test('respects `proseWrap`', async () => {
	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		proseWrap: 'always',
	});

	expect(output).toMatchSnapshot();
});

test('respects `tabWidth`', async () => {
	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		tabWidth: 4,
	});

	expect(output).toMatchSnapshot();
});

test('supports `yamlBlockStyle`', async () => {
	for (const yamlBlockStyle of ['folded', 'literal'] as const) {
		const output = await format(TEST_YAML, {
			parser: 'yaml',
			plugins: [pluginYAML],
			yamlBlockStyle,
		});

		expect(output).toMatchSnapshot();
	}
});

test('supports `yamlCollectionStyle`', async () => {
	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlCollectionStyle: 'block',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	for (const bracketSpacing of [true, false] as const) {
		const output = await format(TEST_YAML, {
			parser: 'yaml',
			plugins: [pluginYAML],
			bracketSpacing,
			yamlCollectionStyle: 'flow',
		});

		/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
		expect(output).toMatchSnapshot();
	}
});

test('supports `yamlQuoteKeys`', async () => {
	let output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteKeys: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		singleQuote: true,
		yamlQuoteKeys: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlCollectionStyle: 'flow',
		yamlQuoteKeys: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();
});

test('supports `yamlQuoteKeysMatching`', async () => {
	let output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteKeysMatching: '-',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteKeys: true,
		yamlQuoteKeysMatching: '^\\d+$',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();
});

test('supports `yamlQuoteValues`', async () => {
	let output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteValues: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		singleQuote: true,
		yamlQuoteValues: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		singleQuote: true,
		yamlQuoteKeys: true,
		yamlQuoteValues: true,
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();
});

test('supports `yamlQuoteValuesMatching`', async () => {
	let output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteValuesMatching: '[\\s/]',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteValuesMatching: '^\\d+(:\\d+)?$',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();

	output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [pluginYAML],
		yamlQuoteValues: true,
		yamlQuoteValuesMatching: '^(\\d+|true|false|null)$',
	});

	/* oxlint-disable-next-line vitest/prefer-snapshot-hint */
	expect(output).toMatchSnapshot();
});

test('works with other plugins', async () => {
	const testPlugin: Plugin = {
		parsers: {
			yaml: {
				...prettierParsers.yaml,
				parse: () => {},
				preprocess: async () => {
					await new Promise((resolve) => setTimeout(resolve));
					return 'foo: ["bar", "baz"]';
				},
			},
		},
	};

	/* @ts-expect-error */
	delete testPlugin.parsers.yaml.parse;

	const emptyPlugin: Plugin = {};

	const output = await format(TEST_YAML, {
		parser: 'yaml',
		plugins: [testPlugin, emptyPlugin, pluginYAML],
	});

	expect(output).toMatchSnapshot();
});

test('handles empty files', async () => {
	const output = await format('\n', {
		parser: 'yaml',
		plugins: [pluginYAML],
	});

	expect(output).toBe('');
});
