// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formats YAML 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly, time: 12:00 }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`respects \`bracketSpacing\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: {interval: weekly, time: 12:00}

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`respects \`proseWrap\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest
  versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly, time: 12:00 }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`respects \`tabWidth\` 1`] = `
"version: 2

description: >-
    You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
    - package-ecosystem: github-actions
      directory: /
      schedule: { interval: weekly, time: 12:00 }

    - package-ecosystem: npm
      directory: /
      schedule:
          interval: daily
      versioning-strategy: increase
      cooldown:
          default-days: 1
      ignore:
          - dependency-name: |-
                @standard-config/prettier

values:
    0: true
    1: false
    2: null
"
`;

exports[`supports \`yamlBlockStyle\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly, time: 12:00 }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: >-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlBlockStyle\` 2`] = `
"version: 2

description: |-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly, time: 12:00 }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlCollectionStyle\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule:
      interval: weekly
      time: 12:00

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlCollectionStyle\` 2`] = `
"{
  version: 2,

  description: You can use Dependabot to keep the packages you use updated to the latest versions.,

  updates:
    [
      {
        package-ecosystem: github-actions,
        directory: /,
        schedule: { interval: weekly, time: 12:00 },
      },

      {
        package-ecosystem: npm,
        directory: /,
        schedule: { interval: daily },
        versioning-strategy: increase,
        cooldown: { default-days: 1 },
        ignore: [{ dependency-name: "@standard-config/prettier" }],
      },
    ],

  values: { 0: true, 1: false, 2: null },
}
"
`;

exports[`supports \`yamlCollectionStyle\` 3`] = `
"{
  version: 2,

  description: You can use Dependabot to keep the packages you use updated to the latest versions.,

  updates:
    [
      {
        package-ecosystem: github-actions,
        directory: /,
        schedule: {interval: weekly, time: 12:00},
      },

      {
        package-ecosystem: npm,
        directory: /,
        schedule: {interval: daily},
        versioning-strategy: increase,
        cooldown: {default-days: 1},
        ignore: [{dependency-name: "@standard-config/prettier"}],
      },
    ],

  values: {0: true, 1: false, 2: null},
}
"
`;

exports[`supports \`yamlQuoteKeys\` 1`] = `
""version": 2

"description": >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

"updates":
  - "package-ecosystem": github-actions
    "directory": /
    "schedule": { "interval": weekly, "time": 12:00 }

  - "package-ecosystem": npm
    "directory": /
    "schedule":
      "interval": daily
    "versioning-strategy": increase
    "cooldown":
      "default-days": 1
    "ignore":
      - "dependency-name": |-
          @standard-config/prettier

"values":
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteKeys\` 2`] = `
"'version': 2

'description': >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

'updates':
  - 'package-ecosystem': github-actions
    'directory': /
    'schedule': { 'interval': weekly, 'time': 12:00 }

  - 'package-ecosystem': npm
    'directory': /
    'schedule':
      'interval': daily
    'versioning-strategy': increase
    'cooldown':
      'default-days': 1
    'ignore':
      - 'dependency-name': |-
          @standard-config/prettier

'values':
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteKeys\` 3`] = `
"{
  "version": 2,

  "description": You can use Dependabot to keep the packages you use updated to the latest versions.,

  "updates":
    [
      {
        "package-ecosystem": github-actions,
        "directory": /,
        "schedule": { "interval": weekly, "time": 12:00 },
      },

      {
        "package-ecosystem": npm,
        "directory": /,
        "schedule": { "interval": daily },
        "versioning-strategy": increase,
        "cooldown": { "default-days": 1 },
        "ignore": [{ "dependency-name": "@standard-config/prettier" }],
      },
    ],

  "values": { 0: true, 1: false, 2: null },
}
"
`;

exports[`supports \`yamlQuoteKeysMatching\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - "package-ecosystem": github-actions
    directory: /
    schedule: { interval: weekly, time: 12:00 }

  - "package-ecosystem": npm
    directory: /
    schedule:
      interval: daily
    "versioning-strategy": increase
    cooldown:
      "default-days": 1
    ignore:
      - "dependency-name": |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteKeysMatching\` 2`] = `
""version": 2

"description": >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

"updates":
  - "package-ecosystem": github-actions
    "directory": /
    "schedule": { "interval": weekly, "time": 12:00 }

  - "package-ecosystem": npm
    "directory": /
    "schedule":
      "interval": daily
    "versioning-strategy": increase
    "cooldown":
      "default-days": 1
    "ignore":
      - "dependency-name": |-
          @standard-config/prettier

"values":
  "0": true
  "1": false
  "2": null
"
`;

exports[`supports \`yamlQuoteValues\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule: { interval: "weekly", time: "12:00" }

  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "daily"
    versioning-strategy: "increase"
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteValues\` 2`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: 'github-actions'
    directory: '/'
    schedule: { interval: 'weekly', time: '12:00' }

  - package-ecosystem: 'npm'
    directory: '/'
    schedule:
      interval: 'daily'
    versioning-strategy: 'increase'
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteValues\` 3`] = `
"'version': 2

'description': >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

'updates':
  - 'package-ecosystem': 'github-actions'
    'directory': '/'
    'schedule': { 'interval': 'weekly', 'time': '12:00' }

  - 'package-ecosystem': 'npm'
    'directory': '/'
    'schedule':
      'interval': 'daily'
    'versioning-strategy': 'increase'
    'cooldown':
      'default-days': 1
    'ignore':
      - 'dependency-name': |-
          @standard-config/prettier

'values':
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteValuesMatching\` 1`] = `
"version: 2

description: "You can use Dependabot to keep the packages you use updated to the latest versions."

updates:
  - package-ecosystem: github-actions
    directory: "/"
    schedule: { interval: weekly, time: 12:00 }

  - package-ecosystem: npm
    directory: "/"
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: 1
    ignore:
      - dependency-name: "@standard-config/prettier"

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteValuesMatching\` 2`] = `
"version: "2"

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly, time: "12:00" }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    cooldown:
      default-days: "1"
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: true
  1: false
  2: null
"
`;

exports[`supports \`yamlQuoteValuesMatching\` 3`] = `
"version: "2"

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule: { interval: "weekly", time: "12:00" }

  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "daily"
    versioning-strategy: "increase"
    cooldown:
      default-days: "1"
    ignore:
      - dependency-name: |-
          @standard-config/prettier

values:
  0: "true"
  1: "false"
  2: "null"
"
`;

exports[`works with other plugins 1`] = `
"foo: [bar, baz]
"
`;
